[package]
name = "wh-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
console = "0.15.7"
env_logger = "0.10.0"
indicatif = "0.17.7"
log = "0.4.20"
wh-updater-client = { path = "./wh-updater-client"}
smol = "1.3.0"
async-compat = "0.2.2"
native-dialog = "0.6.4"

[workspace]
members = [
    "wh-updater-client"
]

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
strip = true


[build]
target = "i686-pc-windows-msvc"
