[package]
name = "wh-updater-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
reqwest = { version = "0.11.20", features = ["blocking","gzip","stream","rustls-tls"] }
version-compare = "0.1.1"
log = "0.4.20"
futures-util = "0.3.28"
indicatif = "0.17.7"
zip = "0.6"
tempfile = "3.8.0"
winreg = "0.52.0"
native-dialog = "0.6.4"
crc32fast = "1.4.0"
smol = "1.3.0"
async-compat = "0.2.2"

[build]
target = "i686-pc-windows-gnu"
